--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"registered": false, "password_needed": true, "connection_protocol": "tcp", "config_md5": "216e60011d62aa5e01be16ebef093a78", "password": "", "vpn_username": "", "vpn_password": ""}
+{"registered": true, "theme": "dark", "connection_protocol": "udp", "killswitch": "off", "config_md5": "8874636a501af5f8744b4caff8fa8868"}
