stops killswitch on program exit

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"registered": false, "theme": "dark", "connection_protocol": "udp", "killswitch": "off", "config_md5": "8874636a501af5f8744b4caff8fa8868"}
+{"registered": false, "theme": "dark", "connection_protocol": "udp", "killswitch": "on", "config_md5": "8874636a501af5f8744b4caff8fa8868"}
