reverted keyring password storage

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"registered": false, "theme": "dark", "connection_protocol": "udp", "killswitch": "off", "config_md5": "d6827dfb9a91b7ab9172fadfb5160351"}
+{"registered": false, "theme": "dark", "connection_protocol": "udp", "killswitch": "off", "config_md5": "d6827dfb9a91b7ab9172fadfb5160351", "password": "", "vpn_username": "", "vpn_password": "", "password_needed": true}
