--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"registered": true, "theme": "dark", "connection_protocol": "udp", "killswitch": "off", "config_md5": "d6827dfb9a91b7ab9172fadfb5160351", "password": "", "vpn_username": "", "vpn_password": "", "password_needed": false}
+{"registered": false, "theme": "dark", "connection_protocol": "udp", "killswitch": "off", "config_md5": "3fd85b786053314cbe309d07c9b36681", "password": "", "vpn_username": "", "vpn_password": "", "password_needed": true}
